[project]
name = "tracing-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "asmaiqbal85", email = "aasmaiqbal85@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "langsmith[openai-agents]>=0.3.42",
    "openai-agents>=0.0.16",
]

[project.scripts]
tracing-agent = "tracing_agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
